# radio-sorm-copy

./: .gitignore  CF0001.D00  CF0005.D00  CF0550.D00  CF0551.D00  CF0795.D00  cdr.py  config.properties  main.py  pyproject.toml  requirements.txt  setup.py  test.properties  tetra.py
kaitai/parser/: __init__.py  tetra.py  tetra_v5.py
kaitai/src/: tetra.ksy  tetra_55.ksy  tetra_70.ksy
parser/: tetra.py
sorm/: cdr.py  cdr_parser.py  get_cdr.py  main.py  relative.py  setup.cfg  utility.py
sorm/kaitai/parser/: __init__.py  bcd.py  tetra_v5.py  tetra_v6.py  tetra_v7.py
sorm/kaitai/src/: bcd.ksy  tetra.ksy  tetra_55.ksy  tetra_60.ksy  tetra_70.ksy
tests/: conftest.py  test_first.py  test_subscriber.py
