[tool.poetry]
name = "radio-sorm"
version = "0.1.0"
description = "SORAT prj"
authors = ["Your Name <you@example.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"
kaitaistruct = "^0.9"
click = "^8.1.3"
SQLAlchemy = "^1.4.36"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "sorm",
]
